Fixed Nav Clipping
Side menu will now always display at top most level

--- a/bolt-health-app/src/Elements/Navbar/Navbar.css
+++ b/bolt-health-app/src/Elements/Navbar/Navbar.css
@@ -82,6 +82,9 @@
 }
 
 .pad {
+    position: absolute;
+    top: 7px;
+    left: 7px;
     height: 80px;
     display: flex;
     justify-content: flex-start;
